--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@
     --description-color2: rgb(90, 90, 93);
     --header-input-color: rgba(19, 19, 24, 0.5);
     --input-color: rgba(19, 19, 24, 0.3);
+    --list-color: rgb(66, 66, 71);
 }
 section{
     margin: 88px 120px;
@@ -38,14 +39,34 @@ section{
 .banner_description{
     font-size: 0.88rem; /* 16px */
     color: var(--primary-white-color);
+    margin: 21px auto 42px;
+    width: 85%;
 }
 .description1, .list1{
     font-size: 0.88rem; /* 16px */
     color: var(--description-color1);
+    width: 85%;
 }
 .description2{
     font-size: 0.88rem; /* 16px */
     color: var(--description-color2);
+    width: 85%;
+}
+nav ul{
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav ul li{
+    list-style: none;
+}
+nav ul li a{
+    text-decoration: none;
+    color: var(--list-color);
+}
+nav ul li a:hover{
+    color: var(--primary-orange-color);
 }
 .list2{
     font-size: 0.88rem; /* 16px */
@@ -65,6 +86,7 @@ section{
     padding: 12px 21px;
     border: none;
     border-radius: 7px;
+    cursor: pointer;
 }
 .destination_img_title{
     font-size: 1.54rem;  /* 28px */
@@ -87,6 +109,13 @@ section{
     }
     .banner_description, .description1, .description2, .list1, .list2{
         font-size: 0.77rem; /* 14px */
+    }
+    nav ul{
+        width: 30%;
+        flex-direction: column;
+    }
+    nav ul li{
+        padding: 10px 0;
     }
     .price{
         font-size: 0.88rem; /* 16px */
@@ -120,10 +149,67 @@ section{
 
 
 
+/* header section */
+.header{
+    margin: 20px 120px 0;
+}
+.header nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header nav .header_brand{
+    display: flex;
+}
+.header nav #dropdown_btn, .dropdown_btn_icon{
+    display: none;
+}
 
+.header .banner{
+    height: 350px;
+    padding: 50px 162px;
+    margin-top: 44px;
+    background-image: linear-gradient(180deg,  rgba(19, 19, 24, 0.8),rgba(19, 19, 24, 0) 100%), url('../images/header.png');
+    background-size: 100% 100%;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 14px;
+}
+.header .banner .banner_container{
+    width: 680px;
+}
+.header .banner .banner_container_form{
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 14px;
+    background-color: var(--input-color);
+    padding: 14px;
+    display: flex;
+    justify-content: space-between;
+}
+.header .banner .banner_container_form input, select{
+    width: 145px;
+    border-radius: 7px;
+    border: none;
+    outline: none;
+    padding: 14px;
+    color: var(--header-input-color);
+}
+.header .banner .banner_container_form .btn{
+    width: 145px;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 0.88rem; /* 16px */
+}
 /* mobile responsive design */
 @media screen and (max-width: 576px){
-
+    /* .header{
+        margin: 20px;
+    } */
 }
 /* tablet responsive design */
 @media screen and (min-width: 577px) and (max-width: 992px){
