--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,7 @@ nav ul li a:hover{
     }
     .banner_description, .description1, .description2, .list1, .list2{
         font-size: 0.77rem; /* 14px */
+        width: 100%;
     }
     nav ul{
         width: 30%;
@@ -160,13 +161,18 @@ nav ul li a:hover{
 }
 .header nav .header_brand{
     display: flex;
+    align-items: center;
+}
+.header nav .header_brand img{
+    margin-right: 10px;
 }
 .header nav #dropdown_btn, .dropdown_btn_icon{
     display: none;
 }
 
+
 .header .banner{
-    height: 350px;
+    height: 300px;
     padding: 50px 162px;
     margin-top: 44px;
     background-image: linear-gradient(180deg,  rgba(19, 19, 24, 0.8),rgba(19, 19, 24, 0) 100%), url('../images/header.png');
@@ -188,6 +194,7 @@ nav ul li a:hover{
     padding: 14px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .header .banner .banner_container_form input, select{
     width: 145px;
@@ -197,6 +204,9 @@ nav ul li a:hover{
     padding: 14px;
     color: var(--header-input-color);
 }
+.header .banner .banner_container_form input{
+    width: 120px;
+}
 .header .banner .banner_container_form .btn{
     width: 145px;
     font-weight: 700;
@@ -205,11 +215,65 @@ nav ul li a:hover{
     align-items: center;
     font-size: 0.88rem; /* 16px */
 }
+
 /* mobile responsive design */
 @media screen and (max-width: 576px){
-    /* .header{
+    .header{
         margin: 20px;
-    } */
+    }
+    .header nav .dropdown_btn_icon{
+        display: block;
+        cursor: pointer;
+    }
+    .header nav ul{
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 80px;
+        right: -100%;
+        transition: all .50s ease;
+        backdrop-filter: blur(200px);
+        background-color: rgba(255, 255, 255, 0.8);
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .header nav ul li{
+        padding: 30px 0;
+    }
+    #dropdown_btn:checked ~ ul{
+        right: 0;
+    }
+
+    .header .banner{
+        height: 400px;
+        padding: 28px 14px;
+        margin-top: 20px;
+        background-size: 300% 100%;
+    }
+    .header .banner .banner_container{
+        width: 100%;
+        height: 100%;
+    }
+
+
+    .header .banner .banner_container_form{
+        flex-direction: column;
+        padding: 14px;
+        gap: 14px;
+    }
+    .header .banner .banner_container_form input{
+        width: 94%;
+    }
+    .header .banner .banner_container_form select{
+        width: 100%;
+    }
+    .header .banner .banner_container_form .btn{
+        width: 100%;
+        justify-content: center;
+    }
+    .header .banner .banner_container_form .btn img{
+        margin-right: 5px;
+    }
 }
 /* tablet responsive design */
 @media screen and (min-width: 577px) and (max-width: 992px){
