--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,27 @@ nav ul li a:hover{
     section{
         margin: 40px 80px;
     }
+    .banner_title{
+        font-size: 2.31rem; /* 42px */
+    }
+    .title1{
+        font-size: 1.65rem;  /* 30px */
+    }
+    .title2{
+        font-size: 1.21rem;  /* 22px */
+    }
+    .banner_description, .description1, .description2, .list1, .list2{
+        width: 95%;
+    }
+    nav ul{
+        width: 50%;
+    }
+    .price{
+        font-size: 0.99rem; /* 18px */
+    }
+    .destination_img_title{
+        font-size: 1.32rem;  /* 24px */
+    }
 }
 
 
