Add HTML part for destination section

--- a/styles/style.css
+++ b/styles/style.css
@@ -406,6 +406,12 @@ nav ul li a:hover{
 
 
 
+
+
+
+
+/* destination section */
+
 /* mobile responsive design */
 @media screen and (max-width: 576px){
 
