--- a/styles/style.css
+++ b/styles/style.css
@@ -410,8 +410,47 @@ nav ul li a:hover{
 
 
 
-/* destination section */
 
+
+/* destination section */
+.destination .destination_header{
+    width: 565px;
+    text-align: center;
+    margin: 0 auto;
+}
+.destination img{
+    width: 100%;
+    height: 250px;
+    background-color: rgba(19, 19, 24, 0.2);
+    border-radius: 14px;
+}
+.destination .destination_img_box{
+    position: relative;
+}
+.destination .destination_img_box .destination_img_title{
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.destination .destination_container_row1{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 21px;
+    margin: 21px 0;
+}
+.destination .destination_container_row2{
+    display: grid;
+    grid-template-columns: 1fr 1.2fr 0.8fr;
+    gap: 21px;
+    margin-bottom: 21px;
+}
+.destination .destination_container_row3{
+    display: grid;
+    grid-template-columns: 0.8fr 1.2fr;
+    gap: 21px;
+}
 /* mobile responsive design */
 @media screen and (max-width: 576px){
 
