--- a/styles/style.css
+++ b/styles/style.css
@@ -453,7 +453,25 @@ nav ul li a:hover{
 }
 /* mobile responsive design */
 @media screen and (max-width: 576px){
-
+    .destination .destination_header{
+        width: 90%;
+    }
+    .destination img{
+        width: 100%;
+        height: 200px;
+    }
+    .destination .destination_container_row1{
+        grid-template-columns: auto;
+        gap: 14px;
+    }
+    .destination .destination_container_row2{
+        grid-template-columns: auto;
+        gap: 14px;
+    }
+    .destination .destination_container_row3{
+        grid-template-columns: auto;
+        gap: 14px;
+    }
 }
 /* tablet responsive design */
 @media screen and (min-width: 577px) and (max-width: 992px){
