--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ nav ul li a:hover{
     font-size: 1.1rem;  /* 20px */
     font-weight: 800;
     color: var(--primary-orange-color);
+    padding-bottom: 21px;
 }
 .btn{
     font-size: 1.1rem;  /* 20px */
@@ -98,6 +99,12 @@ nav ul li a:hover{
     font-size: 1.54rem;  /* 28px */
     font-weight: 800;
     color: var(--primary-white-color);
+}
+.section_header{
+    width: 565px;
+    text-align: center;
+    margin: 21px auto;
+    padding-bottom: 21px;
 }
 
 
@@ -126,6 +133,7 @@ nav ul li a:hover{
     }
     .price{
         font-size: 0.88rem; /* 16px */
+        padding-bottom: 14px;
     }
     .btn{
         font-size: 0.99rem;  /* 18px */
@@ -134,6 +142,10 @@ nav ul li a:hover{
     .destination_img_title{
         font-size: 1.1rem;  /* 20px */
         font-weight: 700;
+    }
+    .section_header{
+        width: 90%;
+        margin: 0 auto;
     }
 }
 /* tablet responsive design */
@@ -413,12 +425,6 @@ nav ul li a:hover{
 
 
 /* destination section */
-.destination .destination_header, .choose .choose_header{
-    width: 565px;
-    text-align: center;
-    margin: 21px auto;
-    padding-bottom: 21px;
-}
 .destination img{
     width: 100%;
     height: 250px;
@@ -453,10 +459,6 @@ nav ul li a:hover{
 }
 /* mobile responsive design */
 @media screen and (max-width: 576px){
-    .destination .destination_header, .choose .choose_header{
-        width: 90%;
-        margin: 0 auto;
-    }
     .destination img{
         width: 100%;
         height: 200px;
@@ -544,6 +546,9 @@ nav ul li a:hover{
 
 
 
+
+
+/* deals section */
 
 /* mobile responsive design */
 @media screen and (max-width: 576px){
