--- a/styles/style.css
+++ b/styles/style.css
@@ -636,7 +636,16 @@ nav ul li a:hover{
 }
 /* tablet responsive design */
 @media screen and (min-width: 577px) and (max-width: 992px){
-
+    .deals .deals_odd_container{
+        height: 400px;
+    }
+    .deals .deals_even_container{
+        height: 400px;
+    }
+    .deals .deals_container_box{
+        width: 50%;
+        padding: 24px;
+    }
 }
 
 
