--- a/styles/style.css
+++ b/styles/style.css
@@ -671,6 +671,30 @@ nav ul li a:hover{
 
 
 
+
+/* package section */
+.package{
+    display: flex;
+    gap: 40px;
+}
+.package .package_container{
+    width: 45%;
+}
+.package .package_container ul{
+    width: 90%;
+    padding: 0 20px;
+}
+.package .package_container .btn{
+    margin-top: 14px;
+}
+.package .package_video_container{
+    width: 55%;
+}
+.package .package_video_container iframe{
+    height: 100%;
+    width: 100%;
+    border-radius: 14px;
+}
 /* mobile responsive design */
 @media screen and (max-width: 576px){
 
