Add CSS part for newsletter section

--- a/styles/style.css
+++ b/styles/style.css
@@ -726,7 +726,60 @@ nav ul li a:hover{
 
 
 /* newsletter section */
-
+.newsletter{
+    display: grid;
+    grid-template-columns: 0.8fr 1.2fr;
+    gap: 21px;
+}
+.newsletter .newsletter_container{
+    border: 1px solid var(--primary-orange-color);
+    border-radius: 7px;
+    padding: 35px;
+}
+.newsletter .newsletter_container .newsletter_container_header{
+    width: 90%;
+}
+.newsletter .newsletter_container hr{
+    margin: 7px 0 21px;
+    border: 1px solid rgba(19, 19, 24, 0.1);
+}
+.newsletter .newsletter_container form{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+.newsletter .newsletter_container form input{
+    padding: 14px 18px;
+    border-radius: 7px;
+    border: none;
+    background-color: rgba(19, 19, 24, 0.05);
+    color: rgba(19, 19, 24, 0.3);
+}
+.newsletter .newsletter_img_container{
+    border-radius: 14px;
+    background-image: url("../images/newsletter.png");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.newsletter .newsletter_img_container .newsletter_box{
+    width: 265px;
+    color: var(--primary-white-color);
+    background-color: var(--primary-orange-color);
+    border-radius: 14px;
+    text-align: center;
+    padding: 20px 10px;
+    position: absolute;
+    bottom: 12%;
+    right: 1.5%;
+    transform: rotate(-18.5deg);
+}
+.newsletter .newsletter_img_container .newsletter_box .newsletter_box_description{
+    font-size: 1.32rem; /* 24px */
+}
+.newsletter .newsletter_img_container .newsletter_box .newsletter_box_title{
+    font-size: 1.76rem; /* 32px */
+}
 /* mobile responsive design */
 @media screen and (max-width: 576px){
 
