--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
 /* common style */
@@ -859,7 +860,35 @@ nav ul li a:hover{
 
 
 /* footer section */
-
+.footer{
+    background-color: rgba(19, 19, 24, 0.05);
+    padding: 96px 240px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.footer .description2{
+    width: 85%;
+}
+.footer .footer_icons_container{
+    width: 154px;
+    margin-top: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer hr{
+    width: 100%;
+    border: 1px solid rgba(19, 19, 24, 0.1);
+    margin: 44px 0;
+}
+.footer .footer_copyright{
+    font-family: "Inter", sans-serif;
+    font-size: 0.88rem; /* 16px */
+    font-weight: 300;
+}
 /* mobile responsive design */
 @media screen and (max-width: 576px){
 
