--- a/styles/style.css
+++ b/styles/style.css
@@ -889,9 +889,25 @@ nav ul li a:hover{
     font-size: 0.88rem; /* 16px */
     font-weight: 300;
 }
+
+
 /* mobile responsive design */
 @media screen and (max-width: 576px){
-
+    .footer{
+        padding: 20px;
+    }
+    .footer .description2{
+        width: 90%;
+    }
+    .footer .footer_icons_container{
+        margin-top: 10px;
+    }
+    .footer hr{
+        margin: 21px 0;
+    }
+    .footer .footer_copyright{
+        font-size: 0.77rem; /* 14px */
+    }
 }
 /* tablet responsive design */
 @media screen and (min-width: 577px) and (max-width: 992px){
