--- a/styles/style.css
+++ b/styles/style.css
@@ -878,6 +878,7 @@ nav ul li a:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 .footer hr{
     width: 100%;
