--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 
 /* common style */
 *{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family: "Mulish", sans-serif;
     max-width: 1280px;
